GQL errors for entity not found ()